--- a/e-catalogue/index.html
+++ b/e-catalogue/index.html
@@ -1,25 +1,19 @@
 <!doctype html>
-<!--[if lt IE 7 ]> <html lang="en" class="ie6"> <![endif]-->
-<!--[if IE 7 ]>    <html lang="en" class="ie7"> <![endif]-->
-<!--[if IE 8 ]>    <html lang="en" class="ie8"> <![endif]-->
-<!--[if IE 9 ]>    <html lang="en" class="ie9"> <![endif]-->
-<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
+<html lang="en">
 <head>
-<title>E-Catalogue - Lahore Central City</title>
+<title>Using turn.js and the new zoom feature</title>
 <meta name="viewport" content="width = 1050, user-scalable = no" />
+<link rel="icon" type="image/png" href="./assets/fav.svg" />
 <script type="text/javascript" src="./extras/jquery.min.1.7.js"></script>
+<script type="text/javascript" src="./extras/jquery-ui-1.8.20.custom.min.js"></script>
 <script type="text/javascript" src="./extras/modernizr.2.5.3.min.js"></script>
 <script type="text/javascript" src="./lib/hash.js"></script>
-<script src="/js/btn.js" type="text/javascript"></script>
-<link rel="icon" type="image/png" href="./assets/fav.svg" />
-
 </head>
 <body>
 
 <div id="canvas">
 
 <div class="zoom-icon zoom-icon-in"></div>
-
 
 
 <div class="magazine-viewport">
@@ -31,71 +25,10 @@
 			<div ignore="1" class="previous-button"></div>
 		</div>
 	</div>
-</div>
-
-<!-- Thumbnails -->
-<!-- <div class="thumbnails">
-	<div>
-		<ul>
-			<li class="i">
-				<img src="pages/1-thumb.jpg" width="76" height="76" class="page-1">
-				<span>1</span>
-			</li>
-			<li class="d">
-				<img src="pages/2-thumb.jpg" width="76" height="76" class="page-2">
-				<img src="pages/3-thumb.jpg" width="76" height="76" class="page-3">
-				<span>2-3</span>
-			</li>
-			<li class="d">
-				<img src="pages/4-thumb.jpg" width="76" height="76" class="page-4">
-				<img src="pages/5-thumb.jpg" width="76" height="76" class="page-5">
-				<span>4-5</span>
-			</li>
-			<li class="d">
-				<img src="pages/6-thumb.jpg" width="76" height="76" class="page-6">
-				<img src="pages/7-thumb.jpg" width="76" height="76" class="page-7">
-				<span>6-7</span>
-			</li>
-			<li class="d">
-				<img src="pages/8-thumb.jpg" width="76" height="76" class="page-8">
-				<img src="pages/9-thumb.jpg" width="76" height="76" class="page-9">
-				<span>8-9</span>
-			</li>
-			<li class="d">
-				<img src="pages/10-thumb.jpg" width="76" height="76" class="page-10">
-				<img src="pages/11-thumb.jpg" width="76" height="76" class="page-11">
-				<span>10-11</span>
-			</li>
-			<li class="i">
-				<img src="pages/12-thumb.jpg" width="76" height="76" class="page-12">
-				<span>12</span>
-			</li>
-		<ul>
-	<div>	
-</div>
-</div> -->
-
-
-<div class="thumbnails">
-	<div>
-
-		<a target="_blank" href="Brochure.pdf" download="Brochure.pdf" 
-		style="
-			text-decoration: none;
-		">
-			<button class="d-btn" style="
-			text-align: center;
-			margin: 25px auto;
-			display: block;
-			background-color: transparent;
-			cursor: pointer;
-			padding: 15px 40px;
-			border-color: #023b2d;
-			color: #023b2d;
-			text-transform: uppercase;
-			font-weight: 700;"
-			> Download Catalogue </button>
-		</a>
+	<div class="bottom">
+		<div id="slider-bar" class="turnjs-slider">
+			<div id="slider"></div>
+		</div>
 	</div>
 </div>
 
@@ -130,10 +63,6 @@ function loadApp() {
 
 			duration: 1000,
 
-			// Hardware acceleration
-
-			acceleration: !isChrome(),
-
 			// Enables gradients
 
 			gradients: true,
@@ -148,7 +77,7 @@ function loadApp() {
 
 			// The number of pages
 
-			pages: 24,
+			pages: 18,
 
 			// Events
 
@@ -166,17 +95,6 @@ function loadApp() {
 					// Show and hide navigation buttons
 
 					disableControls(page);
-					
-
-					$('.thumbnails .page-'+currentPage).
-						parent().
-						removeClass('current');
-
-					$('.thumbnails .page-'+page).
-						parent().
-						addClass('current');
-
-
 
 				},
 
@@ -185,6 +103,8 @@ function loadApp() {
 					disableControls(page);
 
 					$(this).turn('center');
+
+					$('#slider').slider('value', getViewNumber($(this), page));
 
 					if (page==1) { 
 						$(this).turn('peel', 'br');
@@ -216,7 +136,6 @@ function loadApp() {
 		}, 
 
 		when: {
-
 			swipeLeft: function() {
 
 				$(this).zoom('flipbook').turn('next');
@@ -240,7 +159,7 @@ function loadApp() {
 
 			zoomIn: function () {
 
-				$('.thumbnails').hide();
+				$('#slider-bar').hide();
 				$('.made').hide();
 				$('.magazine').removeClass('animated').addClass('zoom-in');
 				$('.zoom-icon').removeClass('zoom-icon-in').addClass('zoom-icon-out');
@@ -260,8 +179,8 @@ function loadApp() {
 
 			zoomOut: function () {
 
+				$('#slider-bar').fadeIn();
 				$('.exit-message').hide();
-				$('.thumbnails').fadeIn();
 				$('.made').fadeIn();
 				$('.zoom-icon').removeClass('zoom-icon-out').addClass('zoom-icon-in');
 
@@ -338,56 +257,6 @@ function loadApp() {
 		resizeViewport();
 	});
 
-	// Events for thumbnails
-
-	$('.thumbnails').click(function(event) {
-		
-		var page;
-
-		if (event.target && (page=/page-([0-9]+)/.exec($(event.target).attr('class'))) ) {
-		
-			$('.magazine').turn('page', page[1]);
-		}
-	});
-
-	$('.thumbnails li').
-		bind($.mouseEvents.over, function() {
-			
-			$(this).addClass('thumb-hover');
-
-		}).bind($.mouseEvents.out, function() {
-			
-			$(this).removeClass('thumb-hover');
-
-		});
-
-	if ($.isTouch) {
-	
-		$('.thumbnails').
-			addClass('thumbanils-touch').
-			bind($.mouseEvents.move, function(event) {
-				event.preventDefault();
-			});
-
-	} else {
-
-		$('.thumbnails ul').mouseover(function() {
-
-			$('.thumbnails').addClass('thumbnails-hover');
-
-		}).mousedown(function() {
-
-			return false;
-
-		}).mouseout(function() {
-
-			$('.thumbnails').removeClass('thumbnails-hover');
-
-		});
-
-	}
-
-
 	// Regions
 
 	if ($.isTouch) {
@@ -445,6 +314,41 @@ function loadApp() {
 	});
 
 
+	// Slider
+
+	$( "#slider" ).slider({
+		min: 1,
+		max: numberOfViews(flipbook),
+
+		start: function(event, ui) {
+
+			if (!window._thumbPreview) {
+				_thumbPreview = $('<div />', {'class': 'thumbnail'}).html('<div></div>');
+				setPreview(ui.value);
+				_thumbPreview.appendTo($(ui.handle));
+			} else
+				setPreview(ui.value);
+
+			moveBar(false);
+
+		},
+
+		slide: function(event, ui) {
+
+			setPreview(ui.value);
+
+		},
+
+		stop: function() {
+
+			if (window._thumbPreview)
+				_thumbPreview.removeClass('show');
+			
+			$('.magazine').turn('page', Math.max(1, $(this).slider('value')*2 - 2));
+
+		}
+	});
+
 	resizeViewport();
 
 	$('.magazine').addClass('animated');
@@ -485,16 +389,13 @@ function loadApp() {
 
 yepnope({
 	test : Modernizr.csstransforms,
-	yep: ['./lib/turn.js'],
-	nope: ['./lib/turn.html4.min.js'],
-	both: ['./lib/zoom.min.js', 'js/magazine.js', 'css/magazine.css'],
+	yep: ['./lib/turn.min.js'],
+	nope: ['./lib/turn.html4.min.js', 'css/jquery.ui.html4.css'],
+	both: ['./lib/zoom.min.js', 'css/jquery.ui.css', 'js/magazine.js', 'css/magazine.css'],
 	complete: loadApp
 });
 
 </script>
-
-
-
 
 </body>
 </html>
